--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>gbk</project.build.sourceEncoding>
 	</properties>
 
 	<build>
