--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<encoding>gbk</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
