更改编码为utf8的尝试

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<project.build.sourceEncoding>gbk</project.build.sourceEncoding>
+		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
 	</properties>
 
 	<build>
@@ -23,7 +23,7 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
-					<encoding>gbk</encoding>
+					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
